--- a/assets/minecraft/models/item/sapphire_chestplate.json
+++ b/assets/minecraft/models/item/sapphire_chestplate.json
@@ -1,6 +1,7 @@
 {
   "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "minecraft:item/sapphire_chestplate"
+    "layer0": "minecraft:item/sapphire_chestplate",
+    "layer1": "minecraft:item/sapphire_chestplate"
   }
 }
