--- a/assets/minecraft/models/item/sapphire_helmet.json
+++ b/assets/minecraft/models/item/sapphire_helmet.json
@@ -1,6 +1,7 @@
 {
   "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "minecraft:item/sapphire_helmet"
+    "layer0": "minecraft:item/sapphire_helmet",
+    "layer1": "minecraft:item/sapphire_helmet"
   }
 }
